fixing css on mobile version

--- a/ACordesEtVous/src/Components/displaysPage/modal/displayPageModal.css
+++ b/ACordesEtVous/src/Components/displaysPage/modal/displayPageModal.css
@@ -21,7 +21,7 @@
 
 
 .close {
-  color: #aaa;
+  color: #957676;
   float: right;
   font-size: 28px;
   font-weight: bold;
