--- a/ACordesEtVous/src/Components/events/modal/modalEvents.css
+++ b/ACordesEtVous/src/Components/events/modal/modalEvents.css
@@ -22,7 +22,7 @@
 	position: fixed;
 	top: 10%;
 	right: 5%;
-	color: #5f5d5d;
+	color: #745656;
 	float: right;
 	font-size: 28px;
 	font-weight: bold;
@@ -33,4 +33,19 @@
 	color: black;
 	text-decoration: none;
 	cursor: pointer;
+}
+
+@media(max-width: 768px){
+
+	.modalEvent{
+		width: 85%;
+		
+	}
+	.modalEventContent{
+		width: 20rem;
+	}
+
+	.closeEvent{
+		right: 15%;
+	}
 }
